# simple-sql-api

./: .gitignore  CMakeLists.txt  README.md  test_secrets.hpp
lib/: CMakeLists.txt
lib/include/: SimConnection.hpp  SimConnectionBuilder.hpp  SimCoordinator.hpp  SimDataNode.h  SimDatabase.h  SimDatabase.hpp  SimDiagnosticSet.hpp  SimEnvironment.hpp  SimLinkedList.h  SimQL_Constants.h  SimQL_Constants.hpp  SimQL_Handles.hpp  SimQL_ReturnCodes.hpp  SimQL_Strings.hpp  SimQL_Types.h  SimQL_Types.hpp  SimQL_Utility.h  SimQL_Utility.hpp  SimQuery.h  SimQuery.hpp  SimResultSet.hpp  SimRunner.hpp  SimStatement.hpp  SimStatementPool.hpp  SimValueSet.hpp  connection_string_builder.hpp  database_connection.hpp  datanode.h  diagnostic_set.hpp  environment.hpp  linkedlist.h  os_inclusions.hpp  query.h  result_set.hpp  simql.h  simql_constants.hpp  simql_odbctypes.h  simql_returncodes.hpp  simql_strings.hpp  simql_types.h  (+6 more)
lib/src/: SimConnection.cpp  SimConnectionBuilder.cpp  SimDatabase.cpp  SimDiagnosticSet.cpp  SimEnvironment.cpp  SimQL_Handles.cpp  SimQL_Strings.cpp  SimQuery.cpp  SimResultSet.cpp  SimRunner.cpp  SimStatement.cpp  SimStatementPool.cpp  SimValueSet.cpp  connection_string_builder.cpp  database_connection.cpp  diagnostic_set.cpp  environment.cpp  query.cpp  result_set.cpp  simql.cpp  simql_strings.cpp  simquery.cpp  statement.cpp  statement_pool.cpp  value_set.cpp
test/: CMakeLists.txt  test.cpp
